<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">LinkItBoom</string>



    <string name="action_settings">Settings</string>
    <string name="nextsong">Next song</string>
    <string name="nosong">(click reload, also when a next song is being played)</string>
    <string name="currentsong">The current song is:</string>
    <string name="pauseplay">pause|play</string>
    <string name="reload">Reload</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_intro">Fill in the IP of the LinkIt ONE:</string>
    <string name="setting_blank">IP(like 192.168.2.23)</string>
    <string name="setting_button">OK</string>
    <string name="notSetVolume">NOT SET (3)</string>
    <string name="downVolume">↓</string>
    <string name="upVolume">↑</string>
</resources>
