<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tk.arendjan.linkitboom.Setting">

    <TextView android:text="@string/setting_intro" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SettingIntro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IPT"
        android:hint="@string/setting_blank"
        android:text=""
        android:layout_above="@+id/OKB"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_button"
        android:id="@+id/OKB"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
